fix(zzolbot): JSqlParser 5.0 deprecated API 교체
- Statements.getStatements() 제거 (Statements가 ArrayList<Statement> 상속)
- TablesNamesFinder.getTableList() → getTables() (반환 타입 Set<String>)
- new TablesNamesFinder() 원시 타입 → new TablesNamesFinder<>() (unchecked 경고 제거)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>